[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yafowil.webob"
version = "1.5.dev0"
description = "WebOb Integration for YAFOWIL"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
keywords = ["webob", "request", "response", "html", "input", "widgets"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "WebOb",
    "yafowil>2.1.99",
]

[project.entry-points."yafowil.plugin"]
register = "yafowil.webob:register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.package-dir]
"" = "src"

[tool.zest-releaser]
create-wheel = true
